# fantastic-morphisms-talk

./: CHANGELOG.md  LICENSE  fantastic-morphisms-talk.cabal
src/: RecursionSchemes.hs
test/: Main.hs
