cabal-version:      3.0
name:               fantastic-morphisms-talk
version:            0.1.0.0
synopsis:
    A collection of examples from the paper "Fantastic Morphisms and Where to Find Them: A Guide to Recursion Schemes" by Zhixuan Yang, Nicolas Wu

-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Oleg Prutz
maintainer:         olegp04728@gmail.com
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
                    , RecursionSchemes
    -- other-modules:
    -- other-extensions:
    default-extensions: TypeApplications
                      , ScopedTypeVariables
                      , RankNTypes
                      , InstanceSigs
                      , DerivingStrategies
    build-depends:    base
                    , containers
                    , array
                    , comonad
                    , free
                    , recursion-schemes
                    , data-fix
                    , random
    hs-source-dirs:   src
    default-language: Haskell2010

executable fantastic-morphisms-talk
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base
      , fantastic-morphisms-talk

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite fantastic-morphisms-talk-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    default-extensions: TypeApplications
                      , ScopedTypeVariables
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base
      , QuickCheck
      , quickcheck-instances
      , tasty
      , tasty-quickcheck
      , tasty-hunit
      , array
      , extra
      , containers
      , fantastic-morphisms-talk
